20061028 version: corelib-0.441
20061029 code: no longer install symlinks to static libraries, this is
               to work around some more stupid Darwin misbehaviour.
20061109 code: FMT_ULONG == (sizeof(long) >> 1).
20061109 code: array no longer uses specific sized integers.
20061109 code: t_signal test moved to t_sig.
20061111 code: FMT_ULONG == ((sizeof(long) >> 1) * 8).
               FMT_ULONGLONG == ((sizeof(long long) >> 1) * 8).
20061111 code: stalloc now gets the parameters in the right order (this could
               cause crashes on linux, other platforms seemed not to be
               affected).
20061111 code: corelib-conf no longer prints raw include dir, so the
               only valid #include statements are of the form <corelib/*.h>
20061125 code: removal of all superfluous typedefs. buffer is now
               struct buffer. sstring is now struct sstring. etc. this
               is because of various compiler, aesthetic, stylistic and
               whimsical issues.
20061125 code: iarray added.
20061126 version: corelib 0.5
20061128 code: fixed null-dereference in iarray_node.c (if no nodes
               could be allocated).
20061128 code: array.h uses void * for x instead of char *.
20061128 code: sstring_trunc() now implemented as a macro around
               sstring_chop().
20061128 code: added array_zero().
20061128 code: use of alloc_re() in dstring_catb() and dstring_cpyb().
20061210 code: closeonexec() now always returns true on non UNIX-like
               platforms.
20061210 version: corelib 0.51
20061213 code: fixed integer overflows in array and dstring.
20061215 code: dir_array interface upgrade. new functions and tests.
20061215 version: corelib 0.52
20061218 code: ht_free_ext() added.
20061218 code: fmt_u*b() functions added.
20061218 code: fixed integer overflow in iarray.
20061218 code: ht_clear() ht_clear_ext() added.
20061220 code: added squeue and sarray
20061220 code: added fail: tags to tests.