@@ -1,23 +1,22 @@
 #include "scan.h"
 
-unsigned int scan_ulong(const char *s, unsigned long *ul)
+unsigned int scan_ulong(const char *str, unsigned long *ul)
 {
-  unsigned long p;
-  unsigned long r;
-  unsigned long c;
+  unsigned int pos;
+  unsigned int r;
+  unsigned int ch;
 
-  p = 0;
+  pos = 0;
   r = 0;
   
   for (;;) {
-    c = s[p];
-    if (!c) break;
-    if ((c < '0') || (c > '9')) break;
-    c -= '0';
-    r = (r * 10) + c;
-    ++p;
+    ch = str[pos];
+    if (!ch) break;
+    if ((ch < '0') || (ch > '9')) break;
+    ch -= '0';
+    r = (r * 10) + ch;
+    ++pos;
   }
   if (ul) *ul = r;
-  return p;
+  return pos;
 }
-
