@@ -1,6 +1,6 @@
 #include "squeue.h"
 
-void *squeue_data(const struct squeue *sq)
+const void *squeue_data(const struct squeue *sq)
 {
   return sq->x;
 }
