@@ -1,6 +1,6 @@
 #include "sstack.h"
 
-void *sstack_data(const struct sstack *st)
+const void *sstack_data(const struct sstack *st)
 {
   return st->x;
 }
